fix / advances / some role and permission endpoints
